--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,11 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
+
+.page-header {
+    margin-top: 0;
+}
+
+footer {
+    margin-top: 40px;
+}
