--- a/views/layouts/master.handlebars
+++ b/views/layouts/master.handlebars
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Node Express Passport Login</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bb.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <div class="container">
-        {{{body}}}
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+        <div class="row">
+            <div class="header clearfix">
+                <nav>
+                    <ul class="nav nav-pills pull-right">
+                        <li role="presentation"><a href="/">Dashboard</a></li>
+                        <li role="presentation"><a href="/users/login">Login</a></li>
+                        <li role="presentation"><a href="/users/register">Register</a></li>
+                        <li role="presentation"><a href="/users/logout">Logout</a></li>
+                    </ul>
+                </nav>
+                <h3 class="text-muted">Login App using Passport</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            {{{body}}}
+            <footer class="footer">
+                <p>&copy; 2017 Company, Inc.</p>
+            </footer>
+
+        </div>
+        <!-- /container -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
+
 </html>
