--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,12 @@
-LOGIN
+<h2 class="page-header">Login</h2>
+<form action="/users/login" method="post">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+</form>
