--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,1 +1,24 @@
-REGISTER
+<h2 class="page-header">Register</h2>
+<form action="/users/register" method="post">
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Name">
+    </div>
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="Email">
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Password">
+    </div>
+    <div class="form-group">
+        <label for="confirm_password">Confirm Password</label>
+        <input type="password" class="form-control" id="confirm_password" placeholder="Confirm Password">
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+</form>
