--- a/views/layouts/master.handlebars
+++ b/views/layouts/master.handlebars
@@ -29,6 +29,15 @@
         </div>
 
         <div class="row">
+            {{#if success_msg}}
+                <div class="alert alert-success">{{success_msg}}</div>
+            {{/if}}
+            {{#if error_msg}}
+                <div class="alert alert-danger">{{error_msg}}</div>
+            {{/if}}
+            {{#if error}}
+                <div class="alert alert-danger">{{error}}</div>
+            {{/if}}
             {{{body}}}
             <footer class="footer">
                 <p>&copy; 2017 Company, Inc.</p>
